--- a/editor.html
+++ b/editor.html
@@ -17,6 +17,7 @@
         <script src="skins/dark.js"></script>
         <script src="skins/narrow.js"></script>
         <script src="skins/lowkey.js"></script>
+        <script src="skins/narrower.js"></script>
         <script src="wavedrom.min.js"></script>
         <script src="editor.js"></script>
     </head>
